# Infini-mlir

./: .gitignore  CMakeLists.txt  Makefile
infini_mlir/: CMakeLists.txt
infini_mlir/CAPI/: CMakeLists.txt
infini_mlir/CAPI/include/: RegisterEverything.h
infini_mlir/CAPI/src/: RegisterEverything.cpp
infini_mlir/Dialect/: CMakeLists.txt
infini_mlir/Dialect/IR/include/: InfiniOps.h  InfiniOps.td
infini_mlir/Dialect/Interfaces/: Add.cpp  AvgPool.cpp  BatchNorm.cpp  Constant.cpp  Conv.cpp  MatMul.cpp  MaxPool.cpp  Relu.cpp  Reshape.cpp
infini_mlir/Dialect/Transforms/include/: CMakeLists.txt  Passes.h  Passes.td
infini_mlir/Dialect/Transforms/src/: ShapeInfer.cpp
infini_mlir/Interfaces/: CMakeLists.txt
infini_mlir/Interfaces/include/: CMakeLists.txt  ShapeInterface.h  ShapeInterface.td
infini_mlir/Interfaces/src/: CMakeLists.txt  ShapeInterface.cpp
infini_mlir/Support/: CMakeLists.txt
infini_mlir/Support/include/: CMakeLists.txt  Module.h  Module.td
infini_mlir/Support/src/: CMakeLists.txt  Module.cpp
infini_mlir/Tools/: CMakeLists.txt  infini-opt.cpp
infini_mlir/Traits/include/: Traits.h  Traits.td
infini_mlir/Translation/: CMakeLists.txt
infini_mlir/include/: InitAll.h
infini_mlir/python/: CMakeLists.txt
infini_mlir/python/infini_mlir/: RegisterEverything.cpp
infini_mlir/python/infini_mlir/dialects/: InfiniOps.td  infini.py
infini_mlir/python/translation/: BaseImporter.py  MLIRBuilder.py  OnnxImporter.py  model_translator.py  test.py  utils.py
infini_mlir/src/: CMakeLists.txt  InitAll.cpp
